Prevent unnecessary `border-spacing` override

--- a/stylesheets/layout/_table.scss
+++ b/stylesheets/layout/_table.scss
@@ -2,7 +2,6 @@
 ============================================================================ */
 table {
 	border-collapse: collapse;
-	border-spacing: 0;
 	empty-cells: show;
 	font-family: inherit;
 	font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "pnum" 0, "tnum" 1, "onum" 0, "lnum" 1, "dlig" 0;
